<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Title Names -->
    <string name="app_name">AirDesk</string>
    <string name="create_new_workspace">Create New Workspace</string>
    <string name="create_new_file">Create New File</string>
    <string name="tags_of">Tags of</string>
    <string name="users_of">Users of</string>

    <!-- Options -->
    <string name="logout">Logout</string>
    <string name="new_workspace">New Workspace</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>

    <!-- Hints -->
    <string name="nickname">Nickname</string>
    <string name="email">E-Mail</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="enter_text">Enter Text</string>
    <string name="personID">Person\'s ID</string>
    <string name="security_key">Security Key</string>
    <string name="password">Password</string>

    <!-- Descriptions -->
    <string name="app_logo">App Logo</string>
    <string name="file_icon">File icon</string>
    <string name="edit_icon">Edit icon</string>
    <string name="add_file_icon">Add file icon</string>

    <!-- Buttons -->
    <string name="login">Login</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="tags">Tags</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="users">Users</string>
    <string name="create_account">Create Account</string>
    <string name="send_key">Send Key</string>

    <!-- Tabs -->
    <string name="owned">Owned</string>
    <string name="foreign">Foreign</string>

    <!-- Toasts -->
    <string name="invalid_input">Invalid Input</string>
    <string name="already_exists">already exists</string>
    <string name="file_created_successfully">File created successfully</string>
    <string name="file_removed_successfully">File removed successfully</string>
    <string name="file_edited_successfully">File edited successfully</string>
    <string name="workspace_created_successfully">Workspace created successfully</string>
    <string name="workspace_removed_successfully">Workspace removed successfully</string>
    <string name="workspace_edited_successfully">Workspace edited successfully</string>
    <string name="subscriptions_changed_successfully">Subscriptions changed successfully</string>
    <string name="not_enough_memory_available">Not enough memory available</string>
    <string name="file_cant_be_edited_at_the_moment">File can\'t be edited at the moment</string>
    <string name="error_connection_lost_try_again_later">Error: Connection lost. Try again later</string>
    <string name="error_could_not_apply_changes">Error: Could not apply changes</string>
    <string name="security_key_sent">Security Key Sent</string>
    <string name="account_created_successfully">Account created successfully</string>

    <!-- AlertDialogs -->
    <string name="dialog_confirm_delete">Do you want to delete</string>
    <string name="dialog_confirm_remove_user">Do you want to remove user</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_please_wait">Please Wait</string>
    <string name="dialog_loading_user">Loading User…</string>
    <string name="dialog_loading_file">Loading File…</string>
    <string name="dialog_loading_workspaces">Loading Workspaces…</string>
    <string name="dialog_applying_changes">Applying Changes…</string>

    <!-- Settings -->
    <string name="change_user_tags">Change Users/Tags</string>
    <string name="change_privacy">Change privacy</string>
    <string name="change_quota">Change Quota</string>
    <string name="public_privacy">Public</string>
    <string name="private_privacy">Private</string>
    <string name="title_activity_create_account">Create Account</string>

    <!-- Not Organized -->

</resources>
