<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.ulisboa.tecnico.cmov.airdesk.ListActivity">

    <ListView
        android:id="@+id/tagsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/addTag"
        android:layout_centerHorizontal="true"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/tagWriteView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tagsDone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/addTag"
        android:layout_toStartOf="@+id/addTag"
        android:hint="@string/enter_text"
        android:inputType="textEmailAddress"
        android:maxLength="40" />

    <Button
        android:id="@+id/addTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tagsDone"
        android:layout_alignEnd="@+id/tagsView"
        android:layout_alignRight="@+id/tagsView"
        android:onClick="onAddButtonPressed"
        android:text="@string/add" />

    <Button
        android:id="@+id/tagsDone"
        android:text="@string/confirm"
        android:onClick="onConfirmButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/listCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="cancel"
        android:layout_below="@+id/addTag"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

</RelativeLayout>
