<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.ulisboa.tecnico.cmov.airdesk.CreateEditFileActivity">

    <EditText
        android:id="@+id/createFileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:hint="@string/title"
        android:inputType="textShortMessage"
        android:maxLength="40"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/createFileContent"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/createFileCreate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/createFileTitle"
        android:gravity="top|left"
        android:hint="@string/enter_text"
        android:inputType="textMultiLine"
        android:textSize="22sp" />

    <Button
        android:id="@+id/createFileCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="onCreateFileButtonPressed"
        android:text="@string/create"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/createFileCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onCancelCreateFileButtonPressed"
        android:text="@string/cancel"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

</RelativeLayout>
