<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.ulisboa.tecnico.cmov.airdesk.CreateEditWorkspaceActivity">

    <EditText
        android:id="@+id/settingsWorkspaceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/name"
        android:inputType="textShortMessage"
        android:maxLength="40"
        android:textSize="22sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/editPeopleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editPeopleButton"
            android:layout_alignEnd="@+id/editTagsText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/editTagsText"
            android:layout_alignTop="@+id/editPeopleButton"
            android:layout_toStartOf="@+id/editPeopleButton"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/change_users"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/editPeopleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:onClick="addRemoveUsers"
            android:text="@string/users" />

        <TextView
            android:id="@+id/editTagsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTagsButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/editTagsButton"
            android:layout_toLeftOf="@+id/radioGroup"
            android:layout_toStartOf="@+id/radioGroup"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/change_tags"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/editTagsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editPeopleButton"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:onClick="addRemoveTags"
            android:text="@string/tags" />

        <TextView
            android:id="@+id/changePrivacyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/radioGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/radioGroup"
            android:layout_toLeftOf="@+id/radioGroup"
            android:layout_toStartOf="@+id/radioGroup"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/change_privacy"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editTagsButton">

            <RadioButton
                android:id="@+id/publicButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonPressed"
                android:text="@string/public_privacy"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/privateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onRadioButtonPressed"
                android:text="@string/private_privacy"
                android:textSize="22sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/changeQuotaView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/radioGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/radioGroup"
            android:layout_below="@+id/changePrivacyText"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="@string/change_quota"
            android:textSize="22sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/changeQuotaView"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/quotaValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/seekBar"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20sp" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/quotaValue"
            android:onClick="confirm"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/quotaValue"
            android:onClick="cancel"
            android:text="@string/cancel" />

    </RelativeLayout>

    <requestFocus />
</LinearLayout>