<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="pt.ulisboa.tecnico.cmov.airdesk.SettingsActivity">

    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_people"
                android:id="@+id/editPeopleView"
                android:clickable="true"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:gravity="center_horizontal" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/users"
                android:id="@+id/addRemoveUsers"
                android:layout_below="@+id/editPeopleView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:onClick="addRemoveUsers" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_people"
                android:id="@+id/editTagsView"
                android:clickable="true"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_below="@+id/addRemoveUsers"
                android:layout_marginTop="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/confirmButton"
                android:layout_alignEnd="@+id/confirmButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tags"
                android:id="@+id/addRemoveTags"
                android:layout_below="@+id/editTagsView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:onClick="addRemoveTags" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_privacy"
                android:id="@+id/changePrivacyView"
                android:clickable="true"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_below="@+id/addRemoveTags"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp" />


            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/changePrivacyView"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/private_privacy"
                    android:id="@+id/privateButton"
                    android:onClick="onPrivateButtonPressed"
                    android:textSize="25sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/public_privacy"
                    android:id="@+id/publicButton"
                    android:onClick="onPublicButtonPressed"
                    android:textSize="25sp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_quota"
                android:id="@+id/changeQuotaView"
                android:clickable="true"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_below="@+id/radioGroup"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_below="@+id/changeQuotaView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="25dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/quotaValue"
                android:layout_below="@+id/seekBar"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:id="@+id/confirmButton"
                android:layout_below="@+id/seekBar"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp"
                android:onClick="confirm" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancelButton"
                android:layout_below="@+id/seekBar"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="50dp"
                android:onClick="cancel" />

        </RelativeLayout>
    </ScrollView>

    <requestFocus />
</RelativeLayout>